<resources>
    <string name="app_name">Projet_Android_644</string>
    <string-array name="companies">
        <item>Clip Industrie</item>
        <item>HES-SO Valais</item>
    </string-array>
    <string-array name="workers">
        <item>Samuel</item>
        <item>Jacques</item>
    </string-array>
    <string-array name="activities">
        <item>Projet 1</item>
        <item>Projet 2</item>
    </string-array>

    <string name="list_workers">Workers</string>
    <string name="tv_worker">Worker :</string>
    <string name="tv_company">Company :</string>
    <string name="tv_activity">Activity :</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="birthdate">Birthdate</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="addWorker">Add worker...</string>
    <string name="worker_activated">Worker available</string>
    <string name="worker_activated_hint">Activate this worker to make it available.</string>

    <string name="list_companies">Companies</string>
    <string name="company">Company name</string>
    <string name="company_activated">Company available</string>
    <string name="company_activated_hint">Activate this company to make it available.</string>

    <string name="list_activities">Activities</string>
    <string name="activity">Activity name</string>
    <string name="linkedWorker">Linked workers</string>
    <string name="activity_activated">Activity available</string>
    <string name="activity_activated_hint">Activate this activity to make it available.</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_edit_worker_js">EditWorker_js</string>

</resources>
