<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset">
<LinearLayout
    android:id="@+id/activity_edit_worker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/js_vertical_margin"
    android:paddingLeft="@dimen/js_horizontal_margin"
    android:paddingRight="@dimen/js_horizontal_margin"
    android:paddingTop="@dimen/js_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.samuel.projet_android_644.EditWorker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:inputType="textAutoComplete"
            android:hint="@string/firstname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:hint="@string/lastname"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <EditText
            android:id="@+id/et_Birthdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:inputType="date"
            android:hint="@string/birthdate"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:inputType="date"
            android:hint="@string/male"
            android:onClick="onRadioButtonClicked"/>/>
        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:inputType="date"
            android:hint="@string/female"
            android:onClick="onRadioButtonClicked"/>/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <TextView
            android:id="@+id/tv_workerActivated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/worker_activated">
        </TextView>
        <Switch
            android:id="@+id/sw_worker_activated"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <TextView
            android:id="@+id/worker_activated_hint"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/worker_activated_hint">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin"
        android:paddingBottom="@dimen/js_horizontal_margin"
        android:paddingTop="@dimen/js_horizontal_margin">
        <Button
            android:id="@+id/btn_Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin"
        android:paddingBottom="@dimen/js_horizontal_margin"
        android:paddingTop="@dimen/js_horizontal_margin">
        <Button
            android:id="@+id/btn_Delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/delete"/>
    </LinearLayout>
    
</LinearLayout>
</ScrollView>