<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_company"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/js_vertical_margin"
    android:paddingLeft="@dimen/js_horizontal_margin"
    android:paddingRight="@dimen/js_vertical_margin"
    android:paddingTop="@dimen/js_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.samuel.projet_android_644.EditCompany">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <EditText
            android:id="@+id/et_companyName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:inputType="textAutoComplete"
            android:hint="@string/company" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <TextView
            android:id="@+id/tv_companyActivated"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/company_activated">
        </TextView>
        <Switch
            android:id="@+id/tb_company_activated"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <TextView
            android:id="@+id/company_activated_hint"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/company_activated_hint">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin"
        android:paddingBottom="@dimen/js_horizontal_margin"
        android:paddingTop="@dimen/js_horizontal_margin">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin"
        android:paddingBottom="@dimen/js_horizontal_margin"
        android:paddingTop="64dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>

