<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.samuel.projet_android_644.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <EditText
            android:id="@+id/et_activityName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:hint="@string/activity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <TextView
            android:id="@+id/tv_activityActivated"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/activity_activated">
        </TextView>
        <Switch
            android:id="@+id/tb_activity_activated"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <TextView
            android:id="@+id/activity_activated_hint"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/activity_activated_hint">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <ListView
            android:listSelector="@color/colorPrimary"
            android:id="@+id/adding_worker"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/activity_activated_hint">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin"
        android:paddingBottom="@dimen/js_horizontal_margin"
        android:paddingTop="@dimen/js_horizontal_margin">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin"
        android:paddingBottom="@dimen/js_horizontal_margin"
        android:paddingTop="@dimen/js_horizontal_margin">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>
