<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_edit_Worker_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/js_vertical_margin"
    android:paddingLeft="@dimen/js_horizontal_margin"
    android:paddingRight="@dimen/js_horizontal_margin"
    android:paddingTop="@dimen/js_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.samuel.projet_android_644.MainActivity">
    <!--Changer padding dans dimens.xml->dimens.xml-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
        <!--<TextView
            android:id="@+id/tv_firstname"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/tv_firstname">
        </TextView>-->
        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:hint="@string/firstname" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">
       <!-- <TextView
            android:id="@+id/tv_lastname"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/tv_lastname">
        </TextView>-->
        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:hint="@string/lastname"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">

        <!--<TextView
            android:id="@+id/tv_birthdate"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/tv_birthdate">
        </TextView>-->

        <EditText
            android:id="@+id/et_Birthdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:inputType="date"
            android:hint="@string/birthdate"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">

        <!--<TextView
            android:id="@+id/tv_birthdate"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:text="@string/tv_birthdate">
        </TextView>-->

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:inputType="date"
            android:hint="@string/male"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin">

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin"
            android:paddingBottom="@dimen/js_horizontal_margin"
            android:paddingTop="@dimen/js_horizontal_margin"
            android:inputType="date"
            android:hint="@string/female"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin"
        android:paddingBottom="@dimen/js_horizontal_margin"
        android:paddingTop="@dimen/js_horizontal_margin">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/js_horizontal_margin"
        android:paddingRight="@dimen/js_horizontal_margin"
        android:paddingBottom="@dimen/js_horizontal_margin"
        android:paddingTop="@dimen/js_horizontal_margin">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>
