<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/activity_view_company"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.samuel.projet_android_644.ViewCompany"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/company" />

            <TextView
                android:id="@+id/tv_company_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingBottom="@dimen/js_horizontal_margin"
                android:paddingLeft="@dimen/js_horizontal_margin"
                android:paddingRight="@dimen/js_horizontal_margin"
                android:paddingTop="@dimen/js_horizontal_margin"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/js_horizontal_margin"
            android:paddingRight="@dimen/js_horizontal_margin">

            <TextView
                android:id="@+id/tv_companyActivated"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/company_activated"></TextView>

            <TextView
                android:id="@+id/tv_companyActivated_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingBottom="@dimen/js_horizontal_margin"
                android:paddingLeft="@dimen/js_horizontal_margin"
                android:paddingRight="@dimen/js_horizontal_margin"
                android:paddingTop="@dimen/js_horizontal_margin"
                android:textColor="@android:color/black" />
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/modify" />

    </LinearLayout>
</ScrollView>


